--- a/.catalog-onboard-pipeline.yaml
+++ b/.catalog-onboard-pipeline.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v1
 offerings:
-  - name: deploy-arch-ibm-ocp-vpc
+  - name: deploy-arch-ibm-kubernetes-resources
     kind: solution
     catalog_id: f64499c8-eb50-4985-bf91-29f9e605a433
     offering_id:
