--- a/.catalog-onboard-pipeline.yaml
+++ b/.catalog-onboard-pipeline.yaml
@@ -3,8 +3,8 @@ apiVersion: v1
 offerings:
   - name: deploy-arch-ibm-kubernetes-resources
     kind: solution
-    catalog_id: f64499c8-eb50-4985-bf91-29f9e605a433
-    offering_id:
+    catalog_id: 7df1e4ca-d54c-4fd0-82ce-3d13247308cd
+    offering_id: 4bd9e926-a311-4f6e-bbaa-a55bf6c3c163
     variations:
       - name: standard
         mark_ready: true
