--- a/cra-config.yaml
+++ b/cra-config.yaml
@@ -16,3 +16,4 @@ CRA_TARGETS:
       TF_VAR_region: "us-south"
       TF_VAR_cluster_name: "mock-cluster"
       TF_VAR_namespaces: [{"name": "mock-ns"}]
+      TF_VAR_provider_visibility: "public"
